src/style/main.scss
@import './abstracts/mixins';
@import './abstracts/variables';
@import './abstracts/helpers';

@import './base/base';
@import './base/typography';

@import './components/buttons';

@import './layout/footer';
@import './layout/sections';

@import './sections/about';
@import './sections/contact';
@import './sections/hero';
@import './sections/new';
@import './sections/projects';

@import './vendor/css/font-awesome.min.css';

@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@700;900&display=swap');
@import url('http://fonts.cdnfonts.com/css/sf-ui-display');
.logos {
  height: 100px;
  margin-top: 2rem;
}
.logo-footer {
  height: 100px;
  margin-top: 2%;
  padding-right: 1%;
}
.whoarewe {
  font-size: 8rem;
  transform: rotate(-5deg);
  font-weight: 700;
}
.contacts {
  font-size: 8rem;
  font-weight: 700;
}
.contact {
  display: inline-flex;
}
.textHero {
  overflow-wrap: break-word;
  font-size: 2rem;
}
.fira {
  font-family: 'Fira Sans', sans-serif;
}
.bold {
  font-weight: bold;
}
.pb-6 {
  padding-bottom: 3.25rem;
}
.p-slide {
  margin: 0;
}
body {
  overflow-x: hidden;
}
.usage {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 10px;
  grid-auto-rows: minmax(100px, auto);
  margin: 0 auto;
}
p {
  font-family: 'SF UI Display', sans-serif;
}
.light {
  font-weight: 300;
}
.test {
  display: flex;
}
.sf {
  font-family: 'SF UI Display', sans-serif;
}
.usages-font {
  font-size: 20px;
  font-weight: 700;
}
section {
  padding: 2.5rem 0rem !important;
}
.orange {
  color: #e94e1a;
}
.green {
  color: #263b29;
}
.smalltext {
  font-size: 1.5rem;
}
.d-low {
  margin-top: 1rem;
}
.d-low-2 {
  margin-top: rem;
  font-size: 2.5rem;
  font-weight: 300;
}
.semi {
  font-weight: 300;
  font-size: 2rem;
  margin-top: 2rem;
}
.m-text {
  margin-bottom: 2rem;
}
.phone {
  font-size: 1.9rem;
  margin: 0 auto;
  display: flex;
}
.phone-text {
  margin-top: 0.2%;
  margin-left: 1%;
  font-size: 2rem;
}
.px-12 {
  padding-right: 6.5rem !important;
  padding-left: 6.5rem !important;
}
.mail {
  font-size: 1.9rem;
}
.mail-title {
  display: inline-flex;
}
.arrow-position {
  margin-top: 7rem;
  margin-left: 2rem;
}
.number:hover {
  color: #263b29;
}
.number {
  color: #000 !important;
  cursor: pointer;
}
.facebook {
  margin-left: 1rem;
}
.socialmedia {
  width: 50px !important;
  height: 50px !important;
}
a:hover {
  color: #263b29;
}
a {
  color: #000 !important;
  cursor: pointer;
}
.bg-green {
  background-color: #263b29;
}
.bg-orange {
  background-color: #e94e1a;
}
.circle {
  width: 180px;
  margin: 5% auto;
}
.offers {
  transform: rotate(-5deg) scale(1.2) !important;
  color: #fff;
  padding: 2.5rem;
}
.offersize {
  transform: rotate(-5deg) scale(1) !important;
}
.size {
  font-size: 4.5rem;
}
.sizes {
  margin-top: 4rem;
  padding: 8rem;
}
.trust {
  margin-top: 4rem;
}
.p-ding {
  padding: 10px;
  border-radius: 50px;
  width: 50px;
}
.m-lef {
  margin-left: 0.5rem;
  font-size: 2rem;
}
.text-social {
  display: inline-flex;
}
.rounded-custom {
  border-radius: 1.25rem !important;
}
.linesmall {
  height: 0.8rem;
  border-bottom-right-radius: 2rem;
  width: 15rem;
  -webkit-transform: rotate(-5deg);
  transform: rotate(-5deg);
  margin: 0 auto;
  position: absolute;
  margin-left: 24rem;
  margin-top: -3rem;
}
.absolute {
  position: absolute;
}
.relative {
  position: relative;
}
.rotate {
  transform: rotate(-5deg);
}
.spacing {
  width: 100%;
  transform: rotate(-5deg) scale(1.2) !important;
  height: 2rem;
  overflow-y: hidden;
}
.ml-mb {
  margin-left: 15rem;
  margin-bottom: 0.5rem;
}
.boom {
  width: 150px;
  z-index: 2;
  margin: 0 auto;
}
.boom-offer {
  width: 150px;
  z-index: 2;
  margin: 0 auto;
}
.offers-text {
  font-size: 6rem;
}
.big-font-size {
  font-size: 4rem;
}
.text-stop {
  text-align: right !important;
}
.big-font-size-md {
  font-size: 2rem;
}
.big-font-size-xl {
  font-size: 4rem;
}
iframe {
  border-radius: 2% !important;
}
.i4ewOd-pzNkMb-haAclf iframe {
  display: none;
}
.big-font-size-xxl {
  font-size: 9rem;
}
.pb-11 {
  padding-top: 4.5rem;
}
.m-12 {
  margin: 4rem;
}
.ml-2 {
  margin-left: 3rem !important;
}
.mb-3 {
  margin-top: 3rem;
}
.slides {
  margin-top: -3rem;
}
.slider {
  width: 300px;
}
.slider-imgs {
  width: 290px;
  height: 184px;
}
.grids {
  display: inline-grid;
}
.spacings {
  margin-top: 18.2rem;
}
.buttons {
  padding-top: 2rem;
  font-size: 2rem;
  padding-bottom: 2rem;
  color: #fff !important;
  border-radius: 50px;
  border: none;
  width: 25rem;

  margin-left: 28%;
}
.form-control:focus {
  border-color: #e94e1a !important;
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px #e94e1ac9;
}
.socials {
  display: inline-flex;
  align-items: baseline;
  padding-bottom: 6%;
}
.form-control {
  border-color: #e94e1a !important;
}
.form-control:hover {
  border-color: #e94e1a !important;
  box-shadow: 0 0 11px #e94e1ac9;
}
.c-btn {
  color: #fff !important;
}
.buttons-b {
  padding-top: 2rem;
  font-size: 2rem;
  padding-bottom: 2rem;
  color: #fff;
  border-radius: 50px;
  border: none;
  width: 59rem;
}
.negative {
  margin-top: -2rem;
}
.box-test {
  width: 730px;
  height: 500px;
  background-color: #263b29;
  border-radius: 2rem;
  margin: 0 auto;
}
.i4ewOd-pzNkMb-haAclf,
.QUIbkc {
  display: none !important;
}
.space-usages {
  margin-top: 2rem;
}
.yePe5c-haAclf .yePe5c-d75Caf {
  display: none !important;
}
.card-num {
  display: flex;
}
.card-image {
  margin-top: 2rem;
}
.card-number {
  font-weight: bold;
  font-size: 4rem;
}
.card-number-text {
  text-align: start;
  margin-left: 1.5rem;
  font-weight: 300;
  font-size: 2.5rem;
}

.choice-text {
  text-align: start;
}
.card-intro {
  font-size: 2.5rem;
}
.step-card {
  padding: 2rem;
  display: flex;
  flex-direction: column;
  align-content: center;
  align-items: center;
}
.arrow-color {
  color: #fff !important;
}
.arrow-color:hover {
  opacity: 0.75;
}
.text-start {
  text-align: start;
}
.sensibilisation {
  margin-top: 5rem;
}
.sens {
  margin: 7rem;
}
.bg-black {
  background-color: #000;
}
.text-assign {
  font-size: 2rem;
  text-align: justify;
}
.atelier {
  text-align: start;
  margin-top: -5rem;
}
.d-ajust {
  margin-right: 2.5rem;
}
.compost-btns {
  margin-top: 13rem;
}
.big-font-size-sm {
  font-size: 2rem;
}
.if-p {
  padding: 1rem;
}
.card-span {
  border-bottom: 4px solid #e94e1a;
  height: 0%;
  transform: rotate(-5deg);
}
.p-spaces {
  margin-top: 5rem;
}
.ms-negative {
  margin-left: 4rem;
}
.line-sm {
  height: 0.4rem;
  border-bottom-right-radius: 2rem;
  width: 10rem;
  -webkit-transform: rotate(-5deg);
  transform: rotate(-5deg);
  margin: 0 auto;
  position: absolute;
  margin-top: 3rem;
  margin-left: -4rem;
}
.only-text {
  text-align: left !important;
  padding-bottom: 2rem !important;
}
.linesmall-2 {
  height: 0.8rem;
  border-bottom-right-radius: 2rem;
  width: 15rem;
  -webkit-transform: rotate(-5deg);
  transform: rotate(-5deg);
  margin: 0 auto;
  position: absolute;
  margin-right: 4rem;
  margin-left: -5rem;
  margin-top: 9rem;
}
.linesmall-sm {
  height: 3px;
  border-radius: 2px;
  width: 100px;
  -webkit-transform: rotate(-5deg);
  transform: rotate(-5deg);
  margin: 0 auto;
  position: absolute;
  margin-left: 21rem;
  margin-top: 5rem;
}
@media (max-width: 75rem) {
  #start {
    height: 120px !important;
    clip-path: polygon(0 0, 100% 0%, 100% 68%, 0% 100%) !important;
    -webkit-clip-path: polygon(0 0, 100% 0%, 100% 68%, 0% 100%) !important;
  }
  .p-responsive {
    margin: 0 auto;
  }
  .big-font-size-xxl {
    font-size: 5rem;
  }
  .b-res {
    margin-top: 5rem;
  }
  .t-res {
    text-align: start;
  }
  .text-stop {
    text-align: start !important;
  }
  .linesmall-2 {
    height: 0.5rem;
    border-bottom-right-radius: 2rem;
    width: 11rem;
    -webkit-transform: rotate(-5deg);
    transform: rotate(-5deg);
    margin: 0 auto;
    position: absolute;
    margin-right: 4rem;
    margin-left: -6rem;
    margin-top: 6rem;
  }
  .disable {
    display: none;
  }
  .ms-negative {
    margin-left: 6rem !important;
    margin-top: -4rem !important;
  }
  .box-test {
    width: 430px;
    height: 385px;
    background-color: #263b29;
    border-radius: 2rem;
    margin: 0 auto;
  }
  .linesmall {
    height: 3px;
    border-radius: 2px;
    width: 100px;
    -webkit-transform: rotate(-5deg);
    transform: rotate(-5deg);
    margin: 0 auto;
    position: absolute;
    margin-left: 13rem;
    margin-top: -1rem;
  }
  .buttons {
    padding-top: 2rem;
    font-size: 2rem;
    padding-bottom: 2rem;
    color: #fff;
    border-radius: 50px;
    border: none;
    width: 25rem;

    margin-left: 10%;
  }
  .whoarewe {
    font-size: 5rem;
    transform: rotate(-5deg);
    font-weight: 700;
  }

  .size {
    font-size: 4.5rem;
  }
  .ml-mb {
    margin-left: -0.5rem;
    margin-bottom: 2.5rem;
  }
  iframe {
    width: 405px;
    height: 200px;
    margin: 0 auto;
    border-radius: 5px !important;
  }
  .linesmall {
    height: 3px;
    border-radius: 2px;
    width: 100px;
    -webkit-transform: rotate(-5deg);
    transform: rotate(-5deg);
    margin: 0 auto;
    position: absolute;
    margin-left: 12rem;
  }
  #footer {
    background-color: $primary-color;
    background-image: linear-gradient(135deg, $primary-color 0%, $primary-color 100%);
    color: $white-color;
    height: 17% !important;
    border-top: 0px;
    -webkit-clip-path: polygon(100% 3%, 0 100%, 100% 100%) !important;
    clip-path: polygon(100% 3%, 0 100%, 100% 100%) !important;
    padding-bottom: 8%;
    padding: 0;
    @include respond(tab-land) {
      height: 17% !important;
      -webkit-clip-path: none;
      clip-path: none;
      padding: 0 !important;
    }
    .logo-footer {
      height: 100px;
      margin-top: 10%;
      padding-right: 1%;
    }
  }
  .arrow-position {
    margin-top: 3.5rem;
    margin-left: 2rem;
  }
  .logos {
    height: 100px;
    margin-top: 0rem;
  }
  .d-back {
    margin-bottom: 1rem;
  }
  .m-p {
    margin-top: 5%;
  }
}
.cards {
  width: 350px;
  height: 240px;
}
.trusting {
  width: 100%;
  height: 30vh;
}

#footer {
  background-color: $primary-color;
  background-image: linear-gradient(135deg, $primary-color 0%, $primary-color 100%);
  color: $white-color;
  height: 18px;
  border-top: 0px;
  -webkit-clip-path: polygon(100% 3%, 0 100%, 100% 100%);
  clip-path: polygon(100% 3%, 0 100%, 100% 100%);
  padding-bottom: 8%;

  @include respond(tab-land) {
    height: 18px;
    -webkit-clip-path: none;
    clip-path: none;
  }
}
.c-boxs {
  width: 100px;
  height: 100px;
  border-radius: 50px;
}

.center-container {
  margin: 0 auto;
  justify-content: center;
  align-items: center;
}
.text-b {
  display: flex;
}
.big-font {
  font-size: 2rem;
  font-weight: 600;
}

